added a new method that extracts client roles and also changed how permissions are set in the user principal